Fix internet button icon

--- a/web/index.html
+++ b/web/index.html
@@ -89,7 +89,7 @@
     <div class="dashboard-buttons">
         <!-- Internet Status -->
         <a href="https://netblocks.org/iran" target="_blank" class="dashboard-btn internet-btn" title="NetBlocks Iran">
-            <span class="btn-icon">&#128246;</span>
+            <span class="btn-icon">&#x1F4F6;</span>
             <span class="btn-text">Internet</span>
             <span class="status-dot disrupted"></span>
         </a>
